k8s/backend/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: lyrics-ide
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: samplec0de/lyrics-ide-backend:1.0.0
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred
