k8s/backend/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: lyrics-ide
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 80
