k8s/backend/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lyrics-ide-ingress
  namespace: lyrics-ide
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "128m"
spec:
  tls:
  - hosts:
    - lyrics-backend.k8s-1.sslane.ru
    secretName: tls-secret
  rules:
  - host: lyrics-backend.k8s-1.sslane.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
